--- a/STM32.ioc
+++ b/STM32.ioc
@@ -33,8 +33,9 @@ Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TSC
-Mcu.IPNb=7
+Mcu.IP6=TOUCHSENSING
+Mcu.IP7=TSC
+Mcu.IPNb=8
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -59,6 +60,7 @@ Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin26=VP_SYS_V_PVD_IN
 Mcu.Pin27=VP_SYS_VS_tim6
 Mcu.Pin28=VP_SYS_VS_LPOM
+Mcu.Pin29=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -66,7 +68,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -228,6 +230,13 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SYS.IPParameters=PVDLevel
 SYS.PVDLevel=PWR_PVDLEVEL_6
+TOUCHSENSING.IO_TOUCHKEY_B1=G2_IO1
+TOUCHSENSING.IPParameters=TSLPRM_TOTAL_TOUCHKEYS,TSLPRM_TOTAL_TOUCHKEYS_B,IO_TOUCHKEY_B1,TSLPRM_SENSORS_DATAS,TSLPRM_TKEY_DETECT_IN_TH,TSLPRM_TKEY_DETECT_OUT_TH
+TOUCHSENSING.TSLPRM_SENSORS_DATAS=TSLPRM_TOTAL_TOUCHKEYS_B 1 1 
+TOUCHSENSING.TSLPRM_TKEY_DETECT_IN_TH=20
+TOUCHSENSING.TSLPRM_TKEY_DETECT_OUT_TH=15
+TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS=0
+TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS_B=1
 TSC.ChannelIOs-G2_IO1=TSC_GROUP2_IO1
 TSC.ChannelIOs-G2_IO1-Channel=TSC_GROUP2_IO1
 TSC.IODefaultMode=TSC_IODEF_OUT_PP_LOW
@@ -241,4 +250,6 @@ VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
 VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
+VP_TOUCHSENSING_VS_TOUCHSENSING.Mode=TouchSensing_Enabled
+VP_TOUCHSENSING_VS_TOUCHSENSING.Signal=TOUCHSENSING_VS_TOUCHSENSING
 board=custom
