--- a/STM32.ioc
+++ b/STM32.ioc
@@ -22,20 +22,17 @@ FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 FREERTOS.configUSE_TICKLESS_IDLE=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
-I2C1.Timing=0x00100D14
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KBU3
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=FREERTOS
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TOUCHSENSING
-Mcu.IP7=TSC
-Mcu.IPNb=8
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TOUCHSENSING
+Mcu.IP6=TSC
+Mcu.IPNb=7
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -43,24 +40,22 @@ Mcu.Pin1=PC15-OSC32_OUT (PC15)
 Mcu.Pin10=PB0
 Mcu.Pin11=PB1
 Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13 (JTMS-SWDIO)
-Mcu.Pin18=PA14 (JTCK-SWCLK)
-Mcu.Pin19=PA15 (JTDI)
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13 (JTMS-SWDIO)
+Mcu.Pin16=PA14 (JTCK-SWCLK)
+Mcu.Pin17=PA15 (JTDI)
+Mcu.Pin18=PB3 (JTDO-TRACESWO)
+Mcu.Pin19=PB4 (NJTRST)
 Mcu.Pin2=PA0
-Mcu.Pin20=PB3 (JTDO-TRACESWO)
-Mcu.Pin21=PB4 (NJTRST)
-Mcu.Pin22=PB5
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin26=VP_SYS_V_PVD_IN
-Mcu.Pin27=VP_SYS_VS_tim6
-Mcu.Pin28=VP_SYS_VS_LPOM
-Mcu.Pin29=VP_TOUCHSENSING_VS_TOUCHSENSING
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin24=VP_SYS_V_PVD_IN
+Mcu.Pin25=VP_SYS_VS_tim6
+Mcu.Pin26=VP_SYS_VS_LPOM
+Mcu.Pin27=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -68,7 +63,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=30
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -79,7 +74,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:fals
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -97,8 +92,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=R1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.Mode=I2C
-PA10.Signal=I2C1_SDA
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN1_RX
 PA12.Mode=CAN_Activate
@@ -139,8 +132,6 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=G3
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.Mode=I2C
-PA9.Signal=I2C1_SCL
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED_0
 PB0.Locked=true
@@ -204,28 +195,51 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TSC_Init-TSC-false-HAL-true
-RCC.ADCFreq_Value=64000000
+RCC.ADCFreq_Value=32000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=4000000
+RCC.APB1Freq_Value=4000000
+RCC.APB1TimFreq_Value=4000000
+RCC.APB2Freq_Value=4000000
+RCC.APB2TimFreq_Value=4000000
+RCC.CortexFreq_Value=4000000
+RCC.EnbaleCSS=true
+RCC.FCLKCortexFreq_Value=4000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=4000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=ADCFreq_Value,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.I2C1Freq_Value=4000000
+RCC.I2C3Freq_Value=4000000
+RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=4000000
+RCC.LPTIM2Freq_Value=4000000
+RCC.LPUART1Freq_Value=4000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=8000000
 RCC.MSI_VALUE=4000000
-RCC.PLLPoutputFreq_Value=18285714.285714287
-RCC.PLLQoutputFreq_Value=64000000
-RCC.PLLRCLKFreq_Value=64000000
-RCC.PLLSAI1PoutputFreq_Value=18285714.285714287
-RCC.PLLSAI1QoutputFreq_Value=64000000
-RCC.PLLSAI1RoutputFreq_Value=64000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
-RCC.RNGFreq_Value=64000000
-RCC.SAI1Freq_Value=18285714.285714287
-RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=128000000
-RCC.VCOSAI1OutputFreq_Value=128000000
+RCC.PLLPoutputFreq_Value=9142857.142857144
+RCC.PLLQoutputFreq_Value=32000000
+RCC.PLLR=RCC_PLLR_DIV8
+RCC.PLLRCLKFreq_Value=8000000
+RCC.PLLSAI1PoutputFreq_Value=9142857.142857144
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PWRFreq_Value=8000000
+RCC.RNGFreq_Value=32000000
+RCC.SAI1Freq_Value=9142857.142857144
+RCC.SWPMI1Freq_Value=4000000
+RCC.SYSCLKFreq_VALUE=8000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USART1Freq_Value=4000000
+RCC.USART2Freq_Value=4000000
+RCC.VCOInputFreq_Value=8000000
+RCC.VCOOutputFreq_Value=64000000
+RCC.VCOSAI1OutputFreq_Value=64000000
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SYS.IPParameters=PVDLevel
