--- a/STM32.ioc
+++ b/STM32.ioc
@@ -26,13 +26,15 @@ KeepUserPlacement=false
 Mcu.CPN=STM32L431KBU3
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TOUCHSENSING
-Mcu.IP6=TSC
-Mcu.IPNb=7
+Mcu.IP1=CRC
+Mcu.IP2=FREERTOS
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TOUCHSENSING
+Mcu.IP8=TSC
+Mcu.IPNb=9
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -51,11 +53,13 @@ Mcu.Pin2=PA0
 Mcu.Pin20=PB5
 Mcu.Pin21=PB6
 Mcu.Pin22=PB7
-Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin24=VP_SYS_V_PVD_IN
-Mcu.Pin25=VP_SYS_VS_tim6
-Mcu.Pin26=VP_SYS_VS_LPOM
-Mcu.Pin27=VP_TOUCHSENSING_VS_TOUCHSENSING
+Mcu.Pin23=VP_CRC_VS_CRC
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_IWDG_VS_IWDG
+Mcu.Pin26=VP_SYS_V_PVD_IN
+Mcu.Pin27=VP_SYS_VS_tim6
+Mcu.Pin28=VP_SYS_VS_LPOM
+Mcu.Pin29=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -63,12 +67,12 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=28
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
-MxCube.Version=6.15.0
-MxDb.Version=DB.6.0.150
+MxCube.Version=6.16.0
+MxDb.Version=DB.6.0.160
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -173,8 +177,9 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L431KBUx
-ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.18.1
+ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.18.2
 ProjectManager.FreePins=true
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -189,12 +194,12 @@ ProjectManager.ProjectName=STM32
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TSC_Init-TSC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=4000000
@@ -252,12 +257,15 @@ TOUCHSENSING.TSLPRM_TKEY_DETECT_OUT_TH=15
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS=0
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS_B=1
 TSC.ChannelIOs-G2_IO1=TSC_GROUP2_IO1
-TSC.ChannelIOs-G2_IO1-Channel=TSC_GROUP2_IO1
 TSC.IODefaultMode=TSC_IODEF_OUT_PP_LOW
-TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1,ChannelIOs-G2_IO1-Channel
+TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1
 TSC.SamplingIOs=TSC_GROUP2_IO2
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_LPOM.Mode=PowerOptimisation
 VP_SYS_VS_LPOM.Signal=SYS_VS_LPOM
 VP_SYS_VS_tim6.Mode=TIM6
@@ -267,3 +275,4 @@ VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
 VP_TOUCHSENSING_VS_TOUCHSENSING.Mode=TouchSensing_Enabled
 VP_TOUCHSENSING_VS_TOUCHSENSING.Signal=TOUCHSENSING_VS_TOUCHSENSING
 board=custom
+rtos.0.ip=FREERTOS
