--- a/STM32.ioc
+++ b/STM32.ioc
@@ -32,9 +32,10 @@ Mcu.IP3=IWDG
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TOUCHSENSING
-Mcu.IP8=TSC
-Mcu.IPNb=9
+Mcu.IP7=TIM15
+Mcu.IP8=TOUCHSENSING
+Mcu.IP9=TSC
+Mcu.IPNb=10
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -59,15 +60,16 @@ Mcu.Pin25=VP_IWDG_VS_IWDG
 Mcu.Pin26=VP_SYS_V_PVD_IN
 Mcu.Pin27=VP_SYS_VS_tim6
 Mcu.Pin28=VP_SYS_VS_LPOM
-Mcu.Pin29=VP_TOUCHSENSING_VS_TOUCHSENSING
+Mcu.Pin29=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin3=PA1
+Mcu.Pin30=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -93,7 +95,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=R1
+PA1.GPIO_Label=B1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA11.Mode=CAN_Activate
@@ -105,7 +107,7 @@ PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA15\ (JTDI).GPIOParameters=GPIO_Label
-PA15\ (JTDI).GPIO_Label=R3
+PA15\ (JTDI).GPIO_Label=B3
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
@@ -113,11 +115,11 @@ PA2.GPIO_Label=G1
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=B1
+PA3.GPIO_Label=R1
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=R2
+PA4.GPIO_Label=B2
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
@@ -125,11 +127,11 @@ PA5.GPIO_Label=G2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=B2
+PA6.GPIO_Label=R2
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=B3
+PA7.GPIO_Label=R3
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
@@ -199,7 +201,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=4000000
@@ -272,6 +274,8 @@ VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
 VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
+VP_TIM15_VS_ClockSourceINT.Mode=Internal
+VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TOUCHSENSING_VS_TOUCHSENSING.Mode=TouchSensing_Enabled
 VP_TOUCHSENSING_VS_TOUCHSENSING.Signal=TOUCHSENSING_VS_TOUCHSENSING
 board=custom
