--- a/STM32.ioc
+++ b/STM32.ioc
@@ -6,9 +6,11 @@ CAN1.CalculateBaudRate=83333
 CAN1.CalculateTimeBit=12000
 CAN1.CalculateTimeQuantum=4000.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=5
-FREERTOS.IPParameters=Tasks01,configUSE_PREEMPTION,configTICK_RATE_HZ,configENABLE_BACKWARD_COMPATIBILITY,configUSE_TICKLESS_IDLE,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_PREEMPTION,configTICK_RATE_HZ,configENABLE_BACKWARD_COMPATIBILITY,configUSE_TICKLESS_IDLE,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,FootprintOK,Queues01
+FREERTOS.Queues01=PPO2Queue,1,uint32_t,0,Static,PPO2QueueBuffer,PPO2QueueControlBlock
+FREERTOS.Tasks01=TSCTask,24,128,TSCTaskFunc,Default,NULL,Static,TSCTaskBuffer,TSCTaskControlBlock;BlinkTask,32,128,BlinkTaskFunc,Default,NULL,Static,BlinkTaskBuffer,BlinkTaskControlBlock
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
@@ -32,10 +34,9 @@ Mcu.IP3=IWDG
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM15
-Mcu.IP8=TOUCHSENSING
-Mcu.IP9=TSC
-Mcu.IPNb=10
+Mcu.IP7=TOUCHSENSING
+Mcu.IP8=TSC
+Mcu.IPNb=9
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -60,16 +61,15 @@ Mcu.Pin25=VP_IWDG_VS_IWDG
 Mcu.Pin26=VP_SYS_V_PVD_IN
 Mcu.Pin27=VP_SYS_VS_tim6
 Mcu.Pin28=VP_SYS_VS_LPOM
-Mcu.Pin29=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin29=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -259,8 +259,9 @@ TOUCHSENSING.TSLPRM_TKEY_DETECT_OUT_TH=15
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS=0
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS_B=1
 TSC.ChannelIOs-G2_IO1=TSC_GROUP2_IO1
+TSC.ChannelIOs-G2_IO1-Channel=TSC_GROUP2_IO1
 TSC.IODefaultMode=TSC_IODEF_OUT_PP_LOW
-TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1
+TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1,ChannelIOs-G2_IO1-Channel
 TSC.SamplingIOs=TSC_GROUP2_IO2
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
@@ -274,8 +275,6 @@ VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
 VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
-VP_TIM15_VS_ClockSourceINT.Mode=Internal
-VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TOUCHSENSING_VS_TOUCHSENSING.Mode=TouchSensing_Enabled
 VP_TOUCHSENSING_VS_TOUCHSENSING.Signal=TOUCHSENSING_VS_TOUCHSENSING
 board=custom
