--- a/STM32.ioc
+++ b/STM32.ioc
@@ -2,23 +2,33 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.CalculateBaudRate=83333
-CAN1.CalculateTimeBit=12000
-CAN1.CalculateTimeQuantum=4000.0
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN1.ABOM=ENABLE
+CAN1.AWUM=ENABLE
+CAN1.BS1=CAN_BS1_13TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateBaudRate=125000
+CAN1.CalculateTimeBit=8000
+CAN1.CalculateTimeQuantum=500.0
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,SJW,AWUM,ABOM
+CAN1.Prescaler=4
+CAN1.SJW=CAN_SJW_4TQ
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=5
-FREERTOS.IPParameters=Tasks01,configUSE_PREEMPTION,configTICK_RATE_HZ,configENABLE_BACKWARD_COMPATIBILITY,configUSE_TICKLESS_IDLE,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,FootprintOK,Queues01
+FREERTOS.INCLUDE_pcTaskGetTaskName=1
+FREERTOS.INCLUDE_vTaskCleanUpResources=1
+FREERTOS.IPParameters=Tasks01,configUSE_PREEMPTION,configTICK_RATE_HZ,configENABLE_BACKWARD_COMPATIBILITY,configUSE_TICKLESS_IDLE,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,FootprintOK,Queues01,INCLUDE_pcTaskGetTaskName,INCLUDE_vTaskCleanUpResources,configENABLE_FPU,configUSE_NEWLIB_REENTRANT
 FREERTOS.Queues01=PPO2Queue,1,uint32_t,0,Static,PPO2QueueBuffer,PPO2QueueControlBlock
 FREERTOS.Tasks01=TSCTask,24,128,TSCTaskFunc,Default,NULL,Static,TSCTaskBuffer,TSCTaskControlBlock;BlinkTask,32,128,BlinkTaskFunc,Default,NULL,Static,BlinkTaskBuffer,BlinkTaskControlBlock
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
+FREERTOS.configENABLE_FPU=1
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
 FREERTOS.configTICK_RATE_HZ=100
 FREERTOS.configTOTAL_HEAP_SIZE=1024
 FREERTOS.configUSE_IDLE_HOOK=1
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FREERTOS.configUSE_PREEMPTION=0
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 FREERTOS.configUSE_TICKLESS_IDLE=1
@@ -76,7 +86,10 @@ Mcu.UserName=STM32L431KBUx
 MxCube.Version=6.16.0
 MxDb.Version=DB.6.0.160
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:5\:0\:false\:true\:true\:2\:true\:true\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:5\:0\:false\:true\:true\:3\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:true\:true\:1\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -203,26 +216,25 @@ ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.ADCFreq_Value=32000000
-RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
-RCC.AHBFreq_Value=4000000
-RCC.APB1Freq_Value=4000000
-RCC.APB1TimFreq_Value=4000000
-RCC.APB2Freq_Value=4000000
-RCC.APB2TimFreq_Value=4000000
-RCC.CortexFreq_Value=4000000
+RCC.AHBFreq_Value=8000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
+RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=8000000
+RCC.CortexFreq_Value=8000000
 RCC.EnbaleCSS=true
-RCC.FCLKCortexFreq_Value=4000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=4000000
+RCC.HCLKFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=4000000
-RCC.I2C3Freq_Value=4000000
-RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
-RCC.LPTIM1Freq_Value=4000000
-RCC.LPTIM2Freq_Value=4000000
-RCC.LPUART1Freq_Value=4000000
+RCC.I2C1Freq_Value=8000000
+RCC.I2C3Freq_Value=8000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=8000000
+RCC.LPTIM2Freq_Value=8000000
+RCC.LPUART1Freq_Value=8000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -239,11 +251,11 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=8000000
 RCC.RNGFreq_Value=32000000
 RCC.SAI1Freq_Value=9142857.142857144
-RCC.SWPMI1Freq_Value=4000000
+RCC.SWPMI1Freq_Value=8000000
 RCC.SYSCLKFreq_VALUE=8000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USART1Freq_Value=4000000
-RCC.USART2Freq_Value=4000000
+RCC.USART1Freq_Value=8000000
+RCC.USART2Freq_Value=8000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.VCOSAI1OutputFreq_Value=64000000
@@ -259,9 +271,8 @@ TOUCHSENSING.TSLPRM_TKEY_DETECT_OUT_TH=15
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS=0
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS_B=1
 TSC.ChannelIOs-G2_IO1=TSC_GROUP2_IO1
-TSC.ChannelIOs-G2_IO1-Channel=TSC_GROUP2_IO1
 TSC.IODefaultMode=TSC_IODEF_OUT_PP_LOW
-TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1,ChannelIOs-G2_IO1-Channel
+TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1
 TSC.SamplingIOs=TSC_GROUP2_IO2
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
