Set up alarming

--- a/STM32.ioc
+++ b/STM32.ioc
@@ -17,8 +17,8 @@ FREERTOS.HEAP_NUMBER=5
 FREERTOS.INCLUDE_pcTaskGetTaskName=1
 FREERTOS.INCLUDE_vTaskCleanUpResources=1
 FREERTOS.IPParameters=Tasks01,configUSE_PREEMPTION,configTICK_RATE_HZ,configENABLE_BACKWARD_COMPATIBILITY,configUSE_TICKLESS_IDLE,configRECORD_STACK_HIGH_ADDRESS,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,FootprintOK,Queues01,INCLUDE_pcTaskGetTaskName,INCLUDE_vTaskCleanUpResources,configENABLE_FPU,configUSE_NEWLIB_REENTRANT
-FREERTOS.Queues01=PPO2Queue,1,uint32_t,0,Static,PPO2QueueBuffer,PPO2QueueControlBlock
-FREERTOS.Tasks01=TSCTask,24,128,TSCTaskFunc,Default,NULL,Static,TSCTaskBuffer,TSCTaskControlBlock;BlinkTask,32,128,BlinkTaskFunc,Default,NULL,Static,BlinkTaskBuffer,BlinkTaskControlBlock
+FREERTOS.Queues01=PPO2Queue,1,CellValues_t,0,Static,PPO2QueueBuffer,PPO2QueueControlBlock;CellStatQueue,1,uint8_t,0,Static,CellStatBuffer,CellStatControlBlock
+FREERTOS.Tasks01=TSCTask,24,128,TSCTaskFunc,Default,NULL,Static,TSCTaskBuffer,TSCTaskControlBlock;BlinkTask,32,512,BlinkTaskFunc,Default,NULL,Static,BlinkTaskBuffer,BlinkTaskControlBlock;AlertTask,24,128,AlertTaskFunc,Default,NULL,Static,AlertTaskBuffer,AlertTaskControlBlock
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
 FREERTOS.configENABLE_FPU=1
