--- a/STM32.ioc
+++ b/STM32.ioc
@@ -44,9 +44,10 @@ Mcu.IP3=IWDG
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TOUCHSENSING
-Mcu.IP8=TSC
-Mcu.IPNb=9
+Mcu.IP7=TIM7
+Mcu.IP8=TOUCHSENSING
+Mcu.IP9=TSC
+Mcu.IPNb=10
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -71,15 +72,16 @@ Mcu.Pin25=VP_IWDG_VS_IWDG
 Mcu.Pin26=VP_SYS_V_PVD_IN
 Mcu.Pin27=VP_SYS_VS_tim6
 Mcu.Pin28=VP_SYS_VS_LPOM
-Mcu.Pin29=VP_TOUCHSENSING_VS_TOUCHSENSING
+Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA1
+Mcu.Pin30=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -102,6 +104,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -263,6 +266,8 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SYS.IPParameters=PVDLevel
 SYS.PVDLevel=PWR_PVDLEVEL_6
+TIM7.IPParameters=Period
+TIM7.Period=1600
 TOUCHSENSING.IO_TOUCHKEY_B1=G2_IO1
 TOUCHSENSING.IPParameters=TSLPRM_TOTAL_TOUCHKEYS,TSLPRM_TOTAL_TOUCHKEYS_B,IO_TOUCHKEY_B1,TSLPRM_SENSORS_DATAS,TSLPRM_TKEY_DETECT_IN_TH,TSLPRM_TKEY_DETECT_OUT_TH
 TOUCHSENSING.TSLPRM_SENSORS_DATAS=TSLPRM_TOTAL_TOUCHKEYS_B 1 1 
@@ -286,6 +291,8 @@ VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
 VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TOUCHSENSING_VS_TOUCHSENSING.Mode=TouchSensing_Enabled
 VP_TOUCHSENSING_VS_TOUCHSENSING.Signal=TOUCHSENSING_VS_TOUCHSENSING
 board=custom
