--- a/STM32.ioc
+++ b/STM32.ioc
@@ -39,15 +39,16 @@ Mcu.CPN=STM32L431KBU3
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CRC
+Mcu.IP10=TSC
 Mcu.IP2=FREERTOS
 Mcu.IP3=IWDG
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM7
-Mcu.IP8=TOUCHSENSING
-Mcu.IP9=TSC
-Mcu.IPNb=10
+Mcu.IP6=RTC
+Mcu.IP7=SYS
+Mcu.IP8=TIM7
+Mcu.IP9=TOUCHSENSING
+Mcu.IPNb=11
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -69,19 +70,21 @@ Mcu.Pin22=PB7
 Mcu.Pin23=VP_CRC_VS_CRC
 Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin25=VP_IWDG_VS_IWDG
-Mcu.Pin26=VP_SYS_V_PVD_IN
-Mcu.Pin27=VP_SYS_VS_tim6
-Mcu.Pin28=VP_SYS_VS_LPOM
-Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin28=VP_SYS_V_PVD_IN
+Mcu.Pin29=VP_SYS_VS_tim6
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_TOUCHSENSING_VS_TOUCHSENSING
+Mcu.Pin30=VP_SYS_VS_LPOM
+Mcu.Pin31=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin32=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -98,6 +101,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.RTC_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -184,6 +188,44 @@ PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
 PC15-OSC32_OUT\ (PC15).GPIO_Label=ASC_EN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Signal=GPIO_Output
+PCC.Checker=true
+PCC.Line=STM32L4x1
+PCC.MCU=STM32L431K(B-C)Ux
+PCC.PartNumber=STM32L431KBUx
+PCC.Seq0=2
+PCC.Seq0.Step0.Average_Current=1.49 mA
+PCC.Seq0.Step0.CPU_Frequency=8000000 Hz
+PCC.Seq0.Step0.Category=Interpolation
+PCC.Seq0.Step0.DMIPS=0.0
+PCC.Seq0.Step0.Duration=5 ms
+PCC.Seq0.Step0.Frequency=8 MHz
+PCC.Seq0.Step0.Memory=FLASH
+PCC.Seq0.Step0.Mode=RUN
+PCC.Seq0.Step0.Oscillator=HSE BYP
+PCC.Seq0.Step0.Peripherals=AHB_APB1_Bridge AHB_APB2_Bridge CAN1 CRC GPIOA GPIOB GPIOC IWDG SYS-VREFBUF/COMP1\:COMP_High_Speed-Square_VREFBUF_OFF TIM7 TSC
+PCC.Seq0.Step0.TaMax=104.83
+PCC.Seq0.Step0.User's_Consumption=0 mA
+PCC.Seq0.Step0.Vcore=Range1-High
+PCC.Seq0.Step0.Vdd=3.0
+PCC.Seq0.Step0.Voltage_Source=Battery
+PCC.Seq0.Step1.Average_Current=513 nA
+PCC.Seq0.Step1.CPU_Frequency=0 Hz
+PCC.Seq0.Step1.Category=In DS Table
+PCC.Seq0.Step1.DMIPS=0.0
+PCC.Seq0.Step1.Duration=900 ms
+PCC.Seq0.Step1.Frequency=0 Hz
+PCC.Seq0.Step1.Memory=n/a
+PCC.Seq0.Step1.Mode=STANDBY
+PCC.Seq0.Step1.Oscillator=LSI RTC
+PCC.Seq0.Step1.Peripherals=RTC*
+PCC.Seq0.Step1.TaMax=105
+PCC.Seq0.Step1.User's_Consumption=0 mA
+PCC.Seq0.Step1.Vcore=NoRange
+PCC.Seq0.Step1.Vdd=3.0
+PCC.Seq0.Step1.Voltage_Source=Vbus
+PCC.Series=STM32L4
+PCC.Temperature=25
+PCC.Vdd=3.0
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -217,7 +259,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
@@ -262,6 +304,9 @@ RCC.USART2Freq_Value=8000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.VCOSAI1OutputFreq_Value=64000000
+RTC.IPParameters=WakeUpClock,WakeUpCounter
+RTC.WakeUpClock=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+RTC.WakeUpCounter=2
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SYS.IPParameters=PVDLevel
@@ -285,6 +330,10 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_LPOM.Mode=PowerOptimisation
 VP_SYS_VS_LPOM.Signal=SYS_VS_LPOM
 VP_SYS_VS_tim6.Mode=TIM6
