Get startup and "low" power sequence working (1.5mA :( )

--- a/STM32.ioc
+++ b/STM32.ioc
@@ -34,21 +34,22 @@ FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 FREERTOS.configUSE_TICKLESS_IDLE=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+IWDG.IPParameters=Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_32
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KBU3
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CRC
-Mcu.IP10=TSC
 Mcu.IP2=FREERTOS
 Mcu.IP3=IWDG
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SYS
-Mcu.IP8=TIM7
-Mcu.IP9=TOUCHSENSING
-Mcu.IPNb=11
+Mcu.IP6=SYS
+Mcu.IP7=TIM7
+Mcu.IP8=TOUCHSENSING
+Mcu.IP9=TSC
+Mcu.IPNb=10
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -70,21 +71,19 @@ Mcu.Pin22=PB7
 Mcu.Pin23=VP_CRC_VS_CRC
 Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin25=VP_IWDG_VS_IWDG
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin28=VP_SYS_V_PVD_IN
-Mcu.Pin29=VP_SYS_VS_tim6
+Mcu.Pin26=VP_SYS_V_PVD_IN
+Mcu.Pin27=VP_SYS_VS_tim6
+Mcu.Pin28=VP_SYS_VS_LPOM
+Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_SYS_VS_LPOM
-Mcu.Pin31=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin32=VP_TOUCHSENSING_VS_TOUCHSENSING
+Mcu.Pin30=VP_TOUCHSENSING_VS_TOUCHSENSING
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=33
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KBUx
@@ -101,7 +100,6 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.RTC_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -304,9 +302,6 @@ RCC.USART2Freq_Value=8000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.VCOSAI1OutputFreq_Value=64000000
-RTC.IPParameters=WakeUpClock,WakeUpCounter
-RTC.WakeUpClock=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
-RTC.WakeUpCounter=2
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SYS.IPParameters=PVDLevel
@@ -321,8 +316,9 @@ TOUCHSENSING.TSLPRM_TKEY_DETECT_OUT_TH=15
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS=0
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS_B=1
 TSC.ChannelIOs-G2_IO1=TSC_GROUP2_IO1
+TSC.ChannelIOs-G2_IO1-Channel=TSC_GROUP2_IO1
 TSC.IODefaultMode=TSC_IODEF_OUT_PP_LOW
-TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1
+TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1,ChannelIOs-G2_IO1-Channel
 TSC.SamplingIOs=TSC_GROUP2_IO2
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
@@ -330,10 +326,6 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
-VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_LPOM.Mode=PowerOptimisation
 VP_SYS_VS_LPOM.Signal=SYS_VS_LPOM
 VP_SYS_VS_tim6.Mode=TIM6
