--- a/STM32.ioc
+++ b/STM32.ioc
@@ -10,7 +10,7 @@ CAN1.CalculateBaudRate=125000
 CAN1.CalculateTimeBit=8000
 CAN1.CalculateTimeQuantum=500.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,SJW,AWUM,ABOM
-CAN1.Prescaler=4
+CAN1.Prescaler=8
 CAN1.SJW=CAN_SJW_4TQ
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=5
@@ -97,7 +97,7 @@ NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:true\:true\:1\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -257,31 +257,30 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TSC_Init-TSC-false-HAL-true,5-MX_TOUCHSENSING_Init-TOUCHSENSING-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADCFreq_Value=32000000
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB1TimFreq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.APB2TimFreq_Value=8000000
-RCC.CortexFreq_Value=8000000
-RCC.EnbaleCSS=true
-RCC.FCLKCortexFreq_Value=8000000
+RCC.AHBFreq_Value=16000000
+RCC.APB1Freq_Value=16000000
+RCC.APB1TimFreq_Value=16000000
+RCC.APB2Freq_Value=16000000
+RCC.APB2TimFreq_Value=16000000
+RCC.CortexFreq_Value=16000000
+RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=8000000
+RCC.HCLKFreq_Value=16000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=8000000
-RCC.I2C3Freq_Value=8000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
-RCC.LPTIM1Freq_Value=8000000
-RCC.LPTIM2Freq_Value=8000000
-RCC.LPUART1Freq_Value=8000000
+RCC.I2C1Freq_Value=16000000
+RCC.I2C3Freq_Value=16000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=16000000
+RCC.LPTIM2Freq_Value=16000000
+RCC.LPUART1Freq_Value=16000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=8000000
+RCC.MCO1PinFreq_Value=16000000
 RCC.MSI_VALUE=4000000
 RCC.PLLPoutputFreq_Value=9142857.142857144
 RCC.PLLQoutputFreq_Value=32000000
@@ -291,14 +290,14 @@ RCC.PLLSAI1PoutputFreq_Value=9142857.142857144
 RCC.PLLSAI1QoutputFreq_Value=32000000
 RCC.PLLSAI1RoutputFreq_Value=32000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=8000000
+RCC.PWRFreq_Value=16000000
 RCC.RNGFreq_Value=32000000
 RCC.SAI1Freq_Value=9142857.142857144
-RCC.SWPMI1Freq_Value=8000000
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USART1Freq_Value=8000000
-RCC.USART2Freq_Value=8000000
+RCC.SWPMI1Freq_Value=16000000
+RCC.SYSCLKFreq_VALUE=16000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
+RCC.USART1Freq_Value=16000000
+RCC.USART2Freq_Value=16000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.VCOSAI1OutputFreq_Value=64000000
@@ -316,9 +315,8 @@ TOUCHSENSING.TSLPRM_TKEY_DETECT_OUT_TH=15
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS=0
 TOUCHSENSING.TSLPRM_TOTAL_TOUCHKEYS_B=1
 TSC.ChannelIOs-G2_IO1=TSC_GROUP2_IO1
-TSC.ChannelIOs-G2_IO1-Channel=TSC_GROUP2_IO1
 TSC.IODefaultMode=TSC_IODEF_OUT_PP_LOW
-TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1,ChannelIOs-G2_IO1-Channel
+TSC.IPParameters=SamplingIOs,IODefaultMode,ChannelIOs-G2_IO1
 TSC.SamplingIOs=TSC_GROUP2_IO2
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
